[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/HeartFill.png" type="Texture" id=1]
[ext_resource path="res://Assets/HeartEmp.png" type="Texture" id=2]
[ext_resource path="res://Assets/DisposableDroidBB.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/Buttons/Quit.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/new_theme.tres" type="Theme" id=5]
[ext_resource path="res://src/Buttons/ChangeScene.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UI/UI.gd" type="Script" id=7]
[ext_resource path="res://src/Buttons/RETRYBUTTON.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/SFX/gameover.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 3 )

[node name="UI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -206.0
margin_top = 64.0
margin_right = -46.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Score : %s"

[node name="LifeEmptybar2" type="HBoxContainer" parent="."]
margin_left = 55.0
margin_top = 64.0
margin_right = 255.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="LifeEmptybar2"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="LifeEmptybar2"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="LifeEmptybar2"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lifebar" type="HBoxContainer" parent="."]
margin_left = 55.0
margin_top = 64.0
margin_right = 119.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Lifebar"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Lifebar"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Lifebar"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.380392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -164.0
margin_right = 102.0
margin_bottom = -19.0
custom_fonts/font = SubResource( 2 )
text = "Paused
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PuseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -44.0
margin_right = 150.0
margin_bottom = 168.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RETRYBUUTON" parent="PauseOverlay/PuseMenu" instance=ExtResource( 8 )]
margin_top = 0.0
margin_right = 302.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )

[node name="ChangeScene" parent="PauseOverlay/PuseMenu" instance=ExtResource( 6 )]
margin_top = 50.0
margin_right = 302.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 4 )
Next_Scene = "res://src/Menus/Front Menu.tscn"

[node name="Quit" parent="PauseOverlay/PuseMenu" instance=ExtResource( 4 )]
margin_top = 100.0
margin_right = 302.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 5 )

[node name="Gameover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
